--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -23,8 +23,8 @@
   }
 #firstNav{
     margin-bottom: 0;
-    background-color: darkslategray;
-    height:10em;
+    background-color:#0062cc;
+    height:6em;
     position: relative;
 }
 #products{
