--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,13 +1,16 @@
 #inputField{
     border: none;
+    display: inline-block;
+    float: left;
+    width:4em;
 }
 img{
     height:9em;
     width:9em;
+    border-radius: 50%;
 }
 .textAlign{
-    margin-top: 2em;
-    font-size: large;
+   text-align: left;
 }
 th{
     font-size: x-large;
@@ -15,7 +18,25 @@ th{
 #table{
     width:80%;
     margin:auto;
-    margin-top: 4em;;
+   
+    margin-top: 5em;;
     border: 1px solid lightgrey;
-    box-shadow: 5px 10px 8px 10px #888888;
+    box-shadow: 4px 6px 6px 6px #888888;
+    border-radius: 8px;
 }
+#first{
+    padding-top: 2em;
+  
+}
+#product{
+    padding-bottom:0;
+    color: white;
+}
+#rowHeader{
+    background-color: #0062cc;
+}
+#dropdown-basic-button{
+    background-color: white;
+    color:black;
+}
+
